lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> struct
Rule 2     start -> start struct
Rule 3     start -> { start }
Rule 4     start -> start { start }
Rule 5     struct -> expr ;
Rule 6     struct -> cond_expr
Rule 7     struct -> instruction
Rule 8     loop_start -> loop_struct
Rule 9     loop_start -> loop_start loop_struct
Rule 10    loop_start -> { loop_start }
Rule 11    loop_start -> loop_start { loop_start }
Rule 12    loop_struct -> expr ;
Rule 13    loop_struct -> loop_cond_expr
Rule 14    loop_struct -> loop_instruction
Rule 15    expr -> INTNUM
Rule 16    expr -> FLOATNUM
Rule 17    expr -> STRING
Rule 18    expr -> ID
Rule 19    expr -> ( expr )
Rule 20    expr -> - expr
Rule 21    expr -> expr '
Rule 22    array_interior -> array_interior , expr
Rule 23    array_interior -> expr
Rule 24    expr -> [ array_interior ]
Rule 25    expr -> ID = expr
Rule 26    expr -> ID PLUSASSIGN expr
Rule 27    expr -> ID MINASSIGN expr
Rule 28    expr -> ID MULTASSIGN expr
Rule 29    expr -> ID DIVASSIGN expr
Rule 30    expr -> ID [ expr ] = expr
Rule 31    expr -> ID [ expr ] PLUSASSIGN expr
Rule 32    expr -> ID [ expr ] MINASSIGN expr
Rule 33    expr -> ID [ expr ] MULTASSIGN expr
Rule 34    expr -> ID [ expr ] DIVASSIGN expr
Rule 35    expr -> ID [ expr , expr ] = expr
Rule 36    expr -> ID [ expr , expr ] PLUSASSIGN expr
Rule 37    expr -> ID [ expr , expr ] MINASSIGN expr
Rule 38    expr -> ID [ expr , expr ] MULTASSIGN expr
Rule 39    expr -> ID [ expr , expr ] DIVASSIGN expr
Rule 40    expr -> ID = ZEROS ( expr )
Rule 41    expr -> ID = ONES ( expr )
Rule 42    expr -> ID = EYE ( expr )
Rule 43    expr -> expr + expr
Rule 44    expr -> expr - expr
Rule 45    expr -> expr * expr
Rule 46    expr -> expr / expr
Rule 47    expr -> expr MPLUS expr
Rule 48    expr -> expr MMINUS expr
Rule 49    expr -> expr MMLTP expr
Rule 50    expr -> expr MDIV expr
Rule 51    expr -> expr EQ expr
Rule 52    expr -> expr NEQ expr
Rule 53    expr -> expr GTEQ expr
Rule 54    expr -> expr LTEQ expr
Rule 55    expr -> expr > expr
Rule 56    expr -> expr < expr
Rule 57    cond_expr -> cond_if
Rule 58    cond_expr -> cond_while
Rule 59    cond_expr -> cond_for
Rule 60    cond_block -> struct
Rule 61    cond_block -> { start }
Rule 62    cond_if -> IF ( expr ) cond_block
Rule 63    cond_if -> cond_if ELSE cond_block
Rule 64    loop_cond_expr -> loop_cond_if
Rule 65    loop_cond_expr -> cond_while
Rule 66    loop_cond_expr -> cond_for
Rule 67    loop_cond_block -> loop_struct
Rule 68    loop_cond_block -> { loop_start }
Rule 69    loop_cond_if -> IF ( expr ) loop_cond_block
Rule 70    loop_cond_if -> loop_cond_if ELSE loop_cond_block
Rule 71    cond_while -> WHILE ( expr ) loop_cond_block
Rule 72    cond_for -> FOR ID = expr : expr loop_cond_block
Rule 73    instruction -> RETURN expr ;
Rule 74    instruction -> PRINT array_interior ;
Rule 75    loop_instruction -> BREAK ;
Rule 76    loop_instruction -> CONTINUE ;
Rule 77    loop_instruction -> RETURN expr ;
Rule 78    loop_instruction -> PRINT array_interior ;

Terminals, with rules where they appear

'                    : 21
(                    : 19 40 41 42 62 69 71
)                    : 19 40 41 42 62 69 71
*                    : 45
+                    : 43
,                    : 22 35 36 37 38 39
-                    : 20 44
/                    : 46
:                    : 72
;                    : 5 12 73 74 75 76 77 78
<                    : 56
=                    : 25 30 35 40 41 42 72
>                    : 55
BREAK                : 75
CONTINUE             : 76
DIVASSIGN            : 29 34 39
ELSE                 : 63 70
EQ                   : 51
EYE                  : 42
FLOATNUM             : 16
FOR                  : 72
GTEQ                 : 53
ID                   : 18 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 72
IF                   : 62 69
INTNUM               : 15
LTEQ                 : 54
MDIV                 : 50
MINASSIGN            : 27 32 37
MMINUS               : 48
MMLTP                : 49
MPLUS                : 47
MULTASSIGN           : 28 33 38
NEQ                  : 52
ONES                 : 41
PLUSASSIGN           : 26 31 36
PRINT                : 74 78
RETURN               : 73 77
STRING               : 17
WHILE                : 71
ZEROS                : 40
[                    : 24 30 31 32 33 34 35 36 37 38 39
]                    : 24 30 31 32 33 34 35 36 37 38 39
error                : 
{                    : 3 4 10 11 61 68
}                    : 3 4 10 11 61 68

Nonterminals, with rules where they appear

array_interior       : 22 24 74 78
cond_block           : 62 63
cond_expr            : 6
cond_for             : 59 66
cond_if              : 57 63
cond_while           : 58 65
expr                 : 5 12 19 20 21 22 23 25 26 27 28 29 30 30 31 31 32 32 33 33 34 34 35 35 35 36 36 36 37 37 37 38 38 38 39 39 39 40 41 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 62 69 71 72 72 73 77
instruction          : 7
loop_cond_block      : 69 70 71 72
loop_cond_expr       : 13
loop_cond_if         : 64 70
loop_instruction     : 14
loop_start           : 9 10 11 11 68
loop_struct          : 8 9 67
start                : 2 3 4 4 61 0
struct               : 1 2 60

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . struct
    (2) start -> . start struct
    (3) start -> . { start }
    (4) start -> . start { start }
    (5) struct -> . expr ;
    (6) struct -> . cond_expr
    (7) struct -> . instruction
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . ID
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (25) expr -> . ID = expr
    (26) expr -> . ID PLUSASSIGN expr
    (27) expr -> . ID MINASSIGN expr
    (28) expr -> . ID MULTASSIGN expr
    (29) expr -> . ID DIVASSIGN expr
    (30) expr -> . ID [ expr ] = expr
    (31) expr -> . ID [ expr ] PLUSASSIGN expr
    (32) expr -> . ID [ expr ] MINASSIGN expr
    (33) expr -> . ID [ expr ] MULTASSIGN expr
    (34) expr -> . ID [ expr ] DIVASSIGN expr
    (35) expr -> . ID [ expr , expr ] = expr
    (36) expr -> . ID [ expr , expr ] PLUSASSIGN expr
    (37) expr -> . ID [ expr , expr ] MINASSIGN expr
    (38) expr -> . ID [ expr , expr ] MULTASSIGN expr
    (39) expr -> . ID [ expr , expr ] DIVASSIGN expr
    (40) expr -> . ID = ZEROS ( expr )
    (41) expr -> . ID = ONES ( expr )
    (42) expr -> . ID = EYE ( expr )
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr MPLUS expr
    (48) expr -> . expr MMINUS expr
    (49) expr -> . expr MMLTP expr
    (50) expr -> . expr MDIV expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr NEQ expr
    (53) expr -> . expr GTEQ expr
    (54) expr -> . expr LTEQ expr
    (55) expr -> . expr > expr
    (56) expr -> . expr < expr
    (57) cond_expr -> . cond_if
    (58) cond_expr -> . cond_while
    (59) cond_expr -> . cond_for
    (73) instruction -> . RETURN expr ;
    (74) instruction -> . PRINT array_interior ;
    (62) cond_if -> . IF ( expr ) cond_block
    (63) cond_if -> . cond_if ELSE cond_block
    (71) cond_while -> . WHILE ( expr ) loop_cond_block
    (72) cond_for -> . FOR ID = expr : expr loop_cond_block

    {               shift and go to state 3
    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ID              shift and go to state 10
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21

    start                          shift and go to state 1
    struct                         shift and go to state 2
    expr                           shift and go to state 4
    cond_expr                      shift and go to state 5
    instruction                    shift and go to state 6
    cond_if                        shift and go to state 14
    cond_while                     shift and go to state 15
    cond_for                       shift and go to state 16

state 1

    (0) S' -> start .
    (2) start -> start . struct
    (4) start -> start . { start }
    (5) struct -> . expr ;
    (6) struct -> . cond_expr
    (7) struct -> . instruction
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . ID
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (25) expr -> . ID = expr
    (26) expr -> . ID PLUSASSIGN expr
    (27) expr -> . ID MINASSIGN expr
    (28) expr -> . ID MULTASSIGN expr
    (29) expr -> . ID DIVASSIGN expr
    (30) expr -> . ID [ expr ] = expr
    (31) expr -> . ID [ expr ] PLUSASSIGN expr
    (32) expr -> . ID [ expr ] MINASSIGN expr
    (33) expr -> . ID [ expr ] MULTASSIGN expr
    (34) expr -> . ID [ expr ] DIVASSIGN expr
    (35) expr -> . ID [ expr , expr ] = expr
    (36) expr -> . ID [ expr , expr ] PLUSASSIGN expr
    (37) expr -> . ID [ expr , expr ] MINASSIGN expr
    (38) expr -> . ID [ expr , expr ] MULTASSIGN expr
    (39) expr -> . ID [ expr , expr ] DIVASSIGN expr
    (40) expr -> . ID = ZEROS ( expr )
    (41) expr -> . ID = ONES ( expr )
    (42) expr -> . ID = EYE ( expr )
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr MPLUS expr
    (48) expr -> . expr MMINUS expr
    (49) expr -> . expr MMLTP expr
    (50) expr -> . expr MDIV expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr NEQ expr
    (53) expr -> . expr GTEQ expr
    (54) expr -> . expr LTEQ expr
    (55) expr -> . expr > expr
    (56) expr -> . expr < expr
    (57) cond_expr -> . cond_if
    (58) cond_expr -> . cond_while
    (59) cond_expr -> . cond_for
    (73) instruction -> . RETURN expr ;
    (74) instruction -> . PRINT array_interior ;
    (62) cond_if -> . IF ( expr ) cond_block
    (63) cond_if -> . cond_if ELSE cond_block
    (71) cond_while -> . WHILE ( expr ) loop_cond_block
    (72) cond_for -> . FOR ID = expr : expr loop_cond_block

    {               shift and go to state 23
    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ID              shift and go to state 10
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21

    struct                         shift and go to state 22
    expr                           shift and go to state 4
    cond_expr                      shift and go to state 5
    instruction                    shift and go to state 6
    cond_if                        shift and go to state 14
    cond_while                     shift and go to state 15
    cond_for                       shift and go to state 16

state 2

    (1) start -> struct .

    {               reduce using rule 1 (start -> struct .)
    INTNUM          reduce using rule 1 (start -> struct .)
    FLOATNUM        reduce using rule 1 (start -> struct .)
    STRING          reduce using rule 1 (start -> struct .)
    ID              reduce using rule 1 (start -> struct .)
    (               reduce using rule 1 (start -> struct .)
    -               reduce using rule 1 (start -> struct .)
    [               reduce using rule 1 (start -> struct .)
    RETURN          reduce using rule 1 (start -> struct .)
    PRINT           reduce using rule 1 (start -> struct .)
    IF              reduce using rule 1 (start -> struct .)
    WHILE           reduce using rule 1 (start -> struct .)
    FOR             reduce using rule 1 (start -> struct .)
    $end            reduce using rule 1 (start -> struct .)
    }               reduce using rule 1 (start -> struct .)


state 3

    (3) start -> { . start }
    (1) start -> . struct
    (2) start -> . start struct
    (3) start -> . { start }
    (4) start -> . start { start }
    (5) struct -> . expr ;
    (6) struct -> . cond_expr
    (7) struct -> . instruction
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . ID
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (25) expr -> . ID = expr
    (26) expr -> . ID PLUSASSIGN expr
    (27) expr -> . ID MINASSIGN expr
    (28) expr -> . ID MULTASSIGN expr
    (29) expr -> . ID DIVASSIGN expr
    (30) expr -> . ID [ expr ] = expr
    (31) expr -> . ID [ expr ] PLUSASSIGN expr
    (32) expr -> . ID [ expr ] MINASSIGN expr
    (33) expr -> . ID [ expr ] MULTASSIGN expr
    (34) expr -> . ID [ expr ] DIVASSIGN expr
    (35) expr -> . ID [ expr , expr ] = expr
    (36) expr -> . ID [ expr , expr ] PLUSASSIGN expr
    (37) expr -> . ID [ expr , expr ] MINASSIGN expr
    (38) expr -> . ID [ expr , expr ] MULTASSIGN expr
    (39) expr -> . ID [ expr , expr ] DIVASSIGN expr
    (40) expr -> . ID = ZEROS ( expr )
    (41) expr -> . ID = ONES ( expr )
    (42) expr -> . ID = EYE ( expr )
    (43) expr -> . expr + expr
    (44) expr -> . expr - expr
    (45) expr -> . expr * expr
    (46) expr -> . expr / expr
    (47) expr -> . expr MPLUS expr
    (48) expr -> . expr MMINUS expr
    (49) expr -> . expr MMLTP expr
    (50) expr -> . expr MDIV expr
    (51) expr -> . expr EQ expr
    (52) expr -> . expr NEQ expr
    (53) expr -> . expr GTEQ expr
    (54) expr -> . expr LTEQ expr
    (55) expr -> . expr > expr
    (56) expr -> . expr < expr
    (57) cond_expr -> . cond_if
    (58) cond_expr -> . cond_while
    (59) cond_expr -> . cond_for
    (73) instruction -> . RETURN expr ;
    (74) instruction -> . PRINT array_interior ;
    (62) cond_if -> . IF ( expr ) cond_block
    (63) cond_if -> . cond_if ELSE cond_block
    (71) cond_while -> . WHILE ( expr ) loop_cond_block
    (72) cond_for -> . FOR ID = expr : expr loop_cond_block

    {               shift and go to state 3
    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    ID              shift and go to state 10
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21

    start                          shift and go to state 24
    struct                         shift and go to state 2
    expr                           shift and go to state 4
    cond_expr                      shift and go to state 5
    instruction                    shift and go to state 6
    cond_if                        shift and go to state 14
    cond_while                     shift and go to state 15
    cond_for                       shift and go to state 16

state 4

    (5) struct -> expr . ;
    (21) expr -> expr . '
    (43) expr -> expr . + expr
    (44) expr -> expr . - expr
    (45) expr -> expr . * expr
    (46) expr -> expr . / expr
    (47) expr -> expr . MPLUS expr
    (48) expr -> expr . MMINUS expr
    (49) expr -> expr . MMLTP expr
    (50) expr -> expr . MDIV expr
    (51) expr -> expr . EQ expr
    (52) expr -> expr . NEQ expr
    (53) expr -> expr . GTEQ expr
    (54) expr -> expr . LTEQ expr
    (55) expr -> expr . > expr
    (56) expr -> expr . < expr

    ;               shift and go to state 25
    '               shift and go to state 26
    +               shift and go to state 27
    -               shift and go to state 28
    *               shift and go to state 29
    /               shift and go to state 30
    MPLUS           shift and go to state 31
    MMINUS          shift and go to state 32
    MMLTP           shift and go to state 33
    MDIV            shift and go to state 34
    EQ              shift and go to state 35
    NEQ             shift and go to state 36
    GTEQ            shift and go to state 37
    LTEQ            shift and go to state 38
    >               shift and go to state 39
    <               shift and go to state 40


state 5

    (6) struct -> cond_expr .

    {               reduce using rule 6 (struct -> cond_expr .)
    INTNUM          reduce using rule 6 (struct -> cond_expr .)
    FLOATNUM        reduce using rule 6 (struct -> cond_expr .)
    STRING          reduce using rule 6 (struct -> cond_expr .)
    ID              reduce using rule 6 (struct -> cond_expr .)
    (               reduce using rule 6 (struct -> cond_expr .)
    -               reduce using rule 6 (struct -> cond_expr .)
    [               reduce using rule 6 (struct -> cond_expr .)
    RETURN          reduce using rule 6 (struct -> cond_expr .)
    PRINT           reduce using rule 6 (struct -> cond_expr .)
    IF              reduce using rule 6 (struct -> cond_expr .)
    WHILE           reduce using rule 6 (struct -> cond_expr .)
    FOR             reduce using rule 6 (struct -> cond_expr .)
    $end            reduce using rule 6 (struct -> cond_expr .)
    }               reduce using rule 6 (struct -> cond_expr .)
    ELSE            reduce using rule 6 (struct -> cond_expr .)


state 6

    (7) struct -> instruction .

    {               reduce using rule 7 (struct -> instruction .)
    INTNUM          reduce using rule 7 (struct -> instruction .)
    FLOATNUM        reduce using rule 7 (struct -> instruction .)
    STRING          reduce using rule 7 (struct -> instruction .)
    ID              reduce using rule 7 (struct -> instruction .)
    (               reduce using rule 7 (struct -> instruction .)
    -               reduce using rule 7 (struct -> instruction .)
    [               reduce using rule 7 (struct -> instruction .)
    RETURN          reduce using rule 7 (struct -> instruction .)
    PRINT           reduce using rule 7 (struct -> instruction .)
    IF              reduce using rule 7 (struct -> instruction .)
    WHILE           reduce using rule 7 (struct -> instruction .)
    FOR             reduce using rule 7 (struct -> instruction .)
    $end            reduce using rule 7 (struct -> instruction .)
    }               reduce using rule 7 (struct -> instruction .)
    ELSE            reduce using rule 7 (struct -> instruction .)


state 7

    (15) expr -> INTNUM .

    ;               reduce using rule 15 (expr -> INTNUM .)
    '               reduce using rule 15 (expr -> INTNUM .)
    +               reduce using rule 15 (expr -> INTNUM .)
    -               reduce using rule 15 (expr -> INTNUM .)
    *               reduce using rule 15 (expr -> INTNUM .)
    /               reduce using rule 15 (expr -> INTNUM .)
    MPLUS           reduce using rule 15 (expr -> INTNUM .)
    MMINUS          reduce using rule 15 (expr -> INTNUM .)
    MMLTP           reduce using rule 15 (expr -> INTNUM .)
    MDIV            reduce using rule 15 (expr -> INTNUM .)
    EQ              reduce using rule 15 (expr -> INTNUM .)
    NEQ             reduce using rule 15 (expr -> INTNUM .)
    GTEQ            reduce using rule 15 (expr -> INTNUM .)
    LTEQ            reduce using rule 15 (expr -> INTNUM .)
    >               reduce using rule 15 (expr -> INTNUM .)
    <               reduce using rule 15 (expr -> INTNUM .)
    )               reduce using rule 15 (expr -> INTNUM .)
    ]               reduce using rule 15 (expr -> INTNUM .)
    ,               reduce using rule 15 (expr -> INTNUM .)
    :               reduce using rule 15 (expr -> INTNUM .)
    {               reduce using rule 15 (expr -> INTNUM .)
    INTNUM          reduce using rule 15 (expr -> INTNUM .)
    FLOATNUM        reduce using rule 15 (expr -> INTNUM .)
    STRING          reduce using rule 15 (expr -> INTNUM .)
    ID              reduce using rule 15 (expr -> INTNUM .)
    (               reduce using rule 15 (expr -> INTNUM .)
    [               reduce using rule 15 (expr -> INTNUM .)
    BREAK           reduce using rule 15 (expr -> INTNUM .)
    CONTINUE        reduce using rule 15 (expr -> INTNUM .)
    RETURN          reduce using rule 15 (expr -> INTNUM .)
    PRINT           reduce using rule 15 (expr -> INTNUM .)
    IF              reduce using rule 15 (expr -> INTNUM .)
    WHILE           reduce using rule 15 (expr -> INTNUM .)
    FOR             reduce using rule 15 (expr -> INTNUM .)


state 8

    (16) expr -> FLOATNUM .

    ;               reduce using rule 16 (expr -> FLOATNUM .)
    '               reduce using rule 16 (expr -> FLOATNUM .)
    +               reduce using rule 16 (expr -> FLOATNUM .)
    -               reduce using rule 16 (expr -> FLOATNUM .)
    *               reduce using rule 16 (expr -> FLOATNUM .)
    /               reduce using rule 16 (expr -> FLOATNUM .)
    MPLUS           reduce using rule 16 (expr -> FLOATNUM .)
    MMINUS          reduce using rule 16 (expr -> FLOATNUM .)
    MMLTP           reduce using rule 16 (expr -> FLOATNUM .)
    MDIV            reduce using rule 16 (expr -> FLOATNUM .)
    EQ              reduce using rule 16 (expr -> FLOATNUM .)
    NEQ             reduce using rule 16 (expr -> FLOATNUM .)
    GTEQ            reduce using rule 16 (expr -> FLOATNUM .)
    LTEQ            reduce using rule 16 (expr -> FLOATNUM .)
    >               reduce using rule 16 (expr -> FLOATNUM .)
    <               reduce using rule 16 (expr -> FLOATNUM .)
    )               reduce using rule 16 (expr -> FLOATNUM .)
    ]               reduce using rule 16 (expr -> FLOATNUM .)
    ,               reduce using rule 16 (expr -> FLOATNUM .)
    :               reduce using rule 16 (expr -> FLOATNUM .)
    {               reduce using rule 16 (expr -> FLOATNUM .)
    INTNUM          reduce using rule 16 (expr -> FLOATNUM .)
    FLOATNUM        reduce using rule 16 (expr -> FLOATNUM .)
    STRING          reduce using rule 16 (expr -> FLOATNUM .)
    ID              reduce using rule 16 (expr -> FLOATNUM .)
    (               reduce using rule 16 (expr -> FLOATNUM .)
    [               reduce using rule 16 (expr -> FLOATNUM .)
    BREAK           reduce using rule 16 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 16 (expr -> FLOATNUM .)
    RETURN          reduce using rule 16 (expr -> FLOATNUM .)
    PRINT           reduce using rule 16 (expr -> FLOATNUM .)
    IF              reduce using rule 16 (expr -> FLOATNUM .)
    WHILE           reduce using rule 16 (expr -> FLOATNUM .)
    FOR             reduce using rule 16 (expr -> FLOATNUM .)


state 9

    (17) expr -> STRING .

    ;               reduce using rule 17 (expr -> STRING .)
    '               reduce using rule 17 (expr -> STRING .)
    +               reduce using rule 17 (expr -> STRING .)
    -               reduce using rule 17 (expr -> STRING .)
    *               reduce using rule 17 (expr -> STRING .)
    /               reduce using rule 17 (expr -> STRING .)
    MPLUS           reduce using rule 17 (expr -> STRING .)
    MMINUS          reduce using rule 17 (expr -> STRING .)
    MMLTP           reduce using rule 17 (expr -> STRING .)
    MDIV            reduce using rule 17 (expr -> STRING .)
    EQ              reduce using rule 17 (expr -> STRING .)
    NEQ             reduce using rule 17 (expr -> STRING .)
    GTEQ            reduce using rule 17 (expr -> STRING .)
    LTEQ            reduce using rule 17 (expr -> STRING .)
    >               reduce using rule 17 (expr -> STRING .)
    <               reduce using rule 17 (expr -> STRING .)
    )               reduce using rule 17 (expr -> STRING .)
    ]               reduce using rule 17 (expr -> STRING .)
    ,               reduce using rule 17 (expr -> STRING .)
    :               reduce using rule 17 (expr -> STRING .)
    {               reduce using rule 17 (expr -> STRING .)
    INTNUM          reduce using rule 17 (expr -> STRING .)
    FLOATNUM        reduce using rule 17 (expr -> STRING .)
    STRING          reduce using rule 17 (expr -> STRING .)
    ID              reduce using rule 17 (expr -> STRING .)
    (               reduce using rule 17 (expr -> STRING .)
    [               reduce using rule 17 (expr -> STRING .)
    BREAK           reduce using rule 17 (expr -> STRING .)
    CONTINUE        reduce using rule 17 (expr -> STRING .)
    RETURN          reduce using rule 17 (expr -> STRING .)
    PRINT           reduce using rule 17 (expr -> STRING .)
    IF              reduce using rule 17 (expr -> STRING .)
    WHILE           reduce using rule 17 (expr -> STRING .)
    FOR             reduce using rule 17 (expr -> STRING .)


state 10

    (18) expr -> ID .
    (25) expr -> ID . = expr
    (26) expr -> ID . PLUSASSIGN expr
    (27) expr -> ID . MINASSIGN expr
    (28) expr -> ID . MULTASSIGN expr
    (29) expr -> ID . DIVASSIGN expr
    (30) expr -> ID . [ expr ] = expr
    (31) expr -> ID . [ expr ] PLUSASSIGN expr
    (32) expr -> ID . [ expr ] MINASSIGN expr
    (33) expr -> ID . [ expr ] MULTASSIGN expr
    (34) expr -> ID . [ expr ] DIVASSIGN expr
    (35) expr -> ID . [ expr , expr ] = expr
    (36) expr -> ID . [ expr , expr ] PLUSASSIGN expr
    (37) expr -> ID . [ expr , expr ] MINASSIGN expr
    (38) expr -> ID . [ expr , expr ] MULTASSIGN expr
    (39) expr -> ID . [ expr , expr ] DIVASSIGN expr
    (40) expr -> ID . = ZEROS ( expr )
    (41) expr -> ID . = ONES ( expr )
    (42) expr -> ID . = EYE ( expr )
